alignment and button fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,9 +19,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 100px;
 }
 
 .App-link {
@@ -40,4 +40,18 @@
 .ImageSize {
   max-height: 250px;
   max-width: 500px;
+}
+
+.FileButton {
+  height: 50px !important;
+  width: 50px !important;
+}
+
+.upl {
+  margin-top: 50px !important;
+  margin-bottom: 30px !important;
+}
+
+.blur {
+  margin-top: 30px !important;
 }
